Fixed error handling for avatar changing & fixed word wrapping for chat

--- a/src/front/huelette/src/components/chat.css
+++ b/src/front/huelette/src/components/chat.css
@@ -62,7 +62,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     text-overflow: ellipsis;
-    word-break: keep-all;
+    overflow-wrap: break-word;
     color: white;
 }
 
